--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,9 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/search">Pesquisa</a>
-              <a href="{{ site.baseurl }}/about">Sobre</a>
-              <a href="{{ site.baseurl }}/archive">Arquivo</a>
+              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/archive">Archive</a>
             </nav>
           </header>
         </div>
