--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,11 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/blog">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/archive">Archive</a>
+              <a href="{{ site.baseurl }}/pt/about">Sobre</a>
+              <!-- <a href="{{ site.baseurl }}/search">Search</a> -->
+              <!-- <a href="{{ site.baseurl }}/archive">Archive</a> -->
             </nav>
           </header>
         </div>
