--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/leadership">Leadership</a>
               <a href="{{ site.baseurl }}/blog">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
               <a href="{{ site.baseurl }}/pt/about">Sobre</a>
