--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
               <a href="{{ site.baseurl }}/leadership">Leadership</a>
               <a href="{{ site.baseurl }}/blog">Blog</a>
               <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/pt/about">Sobre</a>
+              <a href="{{ site.baseurl }}/pt/about">Sobre (PT)</a>
               <!-- <a href="{{ site.baseurl }}/search">Search</a> -->
               <!-- <a href="{{ site.baseurl }}/archive">Archive</a> -->
             </nav>
