New main pages: Management and SWE Mgmt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,10 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/leadership">Leadership</a>
               <a href="{{ site.baseurl }}/blog">Blog</a>
+              <a href="{{ site.baseurl }}/leadership">Leadership</a>
+              <a href="{{ site.baseurl }}/mgmt">Management</a>
+              <a href="{{ site.baseurl }}/mgmt/swe">SWE Mgmt</a>
               <a href="{{ site.baseurl }}/about">About</a>
               <a href="{{ site.baseurl }}/pt/about"><nobr>Sobre (PT)</nobr></a>
               <!-- <a href="{{ site.baseurl }}/search">Search</a> -->
