Adding Google Custom Search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
               <a href="{{ site.baseurl }}/mgmt/swe">SWE Mgmt</a>
               <a href="{{ site.baseurl }}/reading">Reading</a>
               <a href="{{ site.baseurl }}/pt/about"><nobr>Sobre (PT)</nobr></a>
-              <!-- <a href="{{ site.baseurl }}/search">Search</a> -->
+              <a href="{{ site.baseurl }}/search">Search</a>
               <!-- <a href="{{ site.baseurl }}/archive">Archive</a> -->
             </nav>
           </header>
