--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
               <a href="{{ site.baseurl }}/blog">Blog</a>
               <a href="{{ site.baseurl }}/leadership">Leadership</a>
               <a href="{{ site.baseurl }}/mgmt">Management</a>
-              <a href="{{ site.baseurl }}/mgmt/swe">SWE Mgmt</a>
+              <a href="{{ site.baseurl }}/mgmt/swe"><nobr>SWE Mgmt</nobr></a>
               <a href="{{ site.baseurl }}/reading">Reading</a>
               <a href="{{ site.baseurl }}/pt/about"><nobr>Sobre (PT)</nobr></a>
               <a href="{{ site.baseurl }}/search">Search</a>
