--- a/_includes/newsletter-banner.html
+++ b/_includes/newsletter-banner.html
@@ -1,9 +1,31 @@
-<form style="border:1px solid #ccc;padding:15px;text-align:center; max-width: 480px; margin: 0 auto"
-    action="https://tinyletter.com/eduklein" method="post" target="popupwindow"
-    onsubmit="window.open('https://tinyletter.com/eduklein', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-    <label for="tlemail">If you want to keep up to date with the content I share, consider subscribing to my
-            newsletter.</label>
-    <div><input type="text" style="width:250px" name="email" id="tlemail" placeholder="e-mail" />&nbsp;<input type="hidden" value="1"
-        name="embed" /><input type="submit" value="Subscribe" /></div>
-    <a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a>
+<div id="mc_embed_shell">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+      #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif;}
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+  <form action="https://eduklein.us13.list-manage.com/subscribe/post?u=ebb7cc2c07def0788b46dbb03&amp;id=ca89faca58&amp;f_id=003415e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+      <div id="mc_embed_signup_scroll"><h2>Subscribe to keep up to date with the content I share.</h2>
+          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+          <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+<div hidden=""><input type="hidden" name="tags" value="7149559"></div>
+      <div id="mce-responses" class="clear foot">
+          <div class="response" id="mce-error-response" style="display: none;"></div>
+          <div class="response" id="mce-success-response" style="display: none;"></div>
+      </div>
+  <div style="position: absolute; left: -5000px;" aria-hidden="true">
+      /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+      <input type="text" name="b_ebb7cc2c07def0788b46dbb03_ca89faca58" tabindex="-1" value="">
+  </div>
+      <div class="optionalParent">
+          <div class="clear foot">
+              <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+              <p style="margin: 0px auto;"><a href="http://eepurl.com/iGTBQs" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+          </div>
+      </div>
+  </div>
 </form>
+</div>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
