--- a/_includes/newsletter-banner.html
+++ b/_includes/newsletter-banner.html
@@ -7,7 +7,7 @@
 </style>
 <div id="mc_embed_signup">
   <form action="https://eduklein.us13.list-manage.com/subscribe/post?u=ebb7cc2c07def0788b46dbb03&amp;id=ca89faca58&amp;f_id=003415e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-      <div id="mc_embed_signup_scroll"><h2>Subscribe to keep up to date with the content I share.</h2>
+      <div id="mc_embed_signup_scroll"><h2>Subscribe to my newsletter and stay up to date with the content I share!</h2>
           <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
           <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
 <div hidden=""><input type="hidden" name="tags" value="7149559"></div>
