Migration from Mailchimp to ConvertKit

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,1 +1,1 @@
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ebb7cc2c07def0788b46dbb03/2c190a89c3615768e1a66aad4.js");</script>
+<script async data-uid="aa64a0267d" src="https://eduklein.ck.page/aa64a0267d/index.js"></script>
